Fix overlapping <div>'s with clear: both css

--- a/client/src/components/navbar/nav.css
+++ b/client/src/components/navbar/nav.css
@@ -3,6 +3,9 @@
   float: left;
   padding: 10px 0px 20px 10px;
 }
+.clear {
+  clear: both;
+}
 
 .navItems {
   float: right;
